--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.ldd.flower.FlowerApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
